# route-planner

./: .gitignore  README.md
client/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css
client/src/api/: map.ts  options.ts  routeControl.ts  routeCreate.ts  routeShare.ts  search.ts
client/src/components/Attribution/: Attribution.tsx
client/src/components/Controls/: Controls.tsx  Distance.tsx  Menu.tsx  ModeControl.tsx  RouteControl.tsx  SearchBar.tsx
client/src/components/Map/: Map.tsx
client/src/components/Routes/: RoutesViewer.tsx
client/src/store/: data.store.ts  history.store.ts  settings.store.ts
client/src/store/utils/: schemas.ts  storage.ts  types.ts
server/: .env.example  Cargo.toml
server/src/: main.rs
server/src/api/: encode_decode.rs  mod.rs  routes.rs  schemas.rs
